# finanalytics_ai

./: .dockerignore  .env.docker  .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  .scheduled_profit_agent.ps1  001_market_data_schema.sql  CATALOGO_DAYTRADE_ROBOS.md  CLAUDE.md  CLAUDE_01.md  CONTEXTO_IA.md  CONTEXT_finanalytics_ai.md  Design_OCO_Trailing_Splits.md  Dockerfile  ESTADO_CONSOLIDADO.md  ESTADO_TECNICO.md  Makefile  Melhorias.md  PENDENCIAS.md  PLANO_CLAUDE_CODE.md  README.md  Roteiro_Pendencias_25abr.md  Roteiro_Testes_Pendentes.md  Roteiro_Testes_Pendentes_24abr.md  Roteiro_Testes_UI_22abr.md  _chk.py  _fix10.py  _fix11.py  _fix12.py  _fix13.py  _fix14.py  _fix15.py  _fix16.py  _fix17.py  _fix3.py  _fix4.py  _fix5.py  _fix6.py  _fix7.py  (+107 more)
.github/workflows/: ci.yml
.run/: API (uvicorn debug).run.xml  Event Worker V2.run.xml  Event Worker.run.xml  Profit Market Worker.run.xml  make check (pre-push).run.xml  mypy.run.xml  pytest coverage.run.xml  pytest integration v2.run.xml  pytest unit.run.xml  ruff check.run.xml  ruff fix.run.xml
OUtputs/: mypy_output.txt  mypy_output2.txt  mypy_output3.txt  mypy_output4.txt  mypy_output5.txt  mypy_output6.txt  mypy_output7.txt  mypy_output8.txt  ruff_output.txt  ruff_output1.txt
ResultadoAnalises/: auth_entities.txt  auth_test_body.txt  auth_test_imports.txt  debug.txt  diagnostico_completo.txt  falhas_dominio.txt  momentum_strategy.txt  output.txt  pytest_final.txt  pytest_final2.txt  pytest_results.txt  smoke_results.txt
_backups_sprint_V3/: profit_agent.py.20260326_132004.bak
alembic/: env.py  fix_jwt_handler.py
alembic/versions/: 0001_baseline.py  0002_portfolio_multi.py  0003_password_reset.py  0004_fintz.py  0005_fintz_schema_fix.py  0006_events_processor.py  0007_cotacoes_numeric_fix.py  0008_user_2fa_remember.py  0009_investment_accounts.py  0010_financial_agents.py  0011_event_records.py  0011_fundos_cvm.py  0012_ml_features.py  0013_merge_heads.py  0014_import_tables.py  0015_portfolio_soft_delete.py  0016_portfolio_name_history.py  0017_user_is_admin_flag.py  0018_portfolio_per_account.py  0019_diario_trade_objective.py  001_initial_schema.py  0020_diario_is_complete.py  0021_backtest_results.py  0022_email_research.py  0023_cointegrated_pairs.py  0024_robot_pair_positions.py  0025_b3_delisted_tickers.py  0026_notifications.py  0027_r5_harness_runs.py  0028_paper_trading.py  53e92a4075c2_merge_main_and_timescale.py  ts_0002_profit_agent_schema.py  ts_0003_profit_orders_source.py  ts_0004_robot_trade.py  ts_0005_backfill_jobs.py  ts_0006_ohlc_extra_cols.py  ts_0007_ohlc_cagg_hierarchy.py  ts_0008_b3_no_trading_days.py  ts_0009_b3_no_trading_segment.py
backtest_runs/bias_validation/: REPORT.md
backup/: Dockerfile.backup  docker-backup.sh
contracts/downstream/: trading_engine_journal_v1.sql
contracts/upstream/: kafka_market_data_v1.avsc  timescale_market_data_v1.sql
docker/prometheus/: prometheus.yml
docs/: PENDENCIAS.md  audit_test_coverage_04mai.md  auditoria_ml_existente.md  banco_de_dados.md  calendario_b3.md  decisoes_arquiteturais.md  nelogica_support_request_04mai.md  observabilidade.md  operacoes.md  profit_agent_ref.md  r3_pairs_expansion_research.md  r3_pairs_expansion_results.txt  relatorio_cobertura.md  runbook_R10_modelos.md  runbook_alembic_audit.md  runbook_feriados_b3.md  runbook_profit_agent.md  runbook_profit_daily_bars_scale.md  runbook_survivorship_bias.md  runbook_wsl2_engine_setup.md  smoke_04mai_checklist.md  smoke_checklist_segunda_04mai.md  smoke_resultados_04mai.md
docs/historico/: CLAUDE_CODE_BRIEFING.md  CLAUDE_CODE_BRIEFING_V2.md  CONTEXTO_IA.md  plano_proximos_passos_17-19abr.md  sessoes_29abr_01mai.md  verificacao_hardware_finanalyticsai.md
fixes/: apply_all_fixes.ps1  fix_consolidated.py  fix_engine.py  fix_fgc_score.py  fix_fgc_score_v2.py  fix_ir_calculator.py  fix_jwt_handler.py  fix_momentum_rsi_filter.py  fix_mypy_errors.py  fix_password_hasher.py
init/: 01_tables.sql
init_timescale/: 001_market_data_schema.sql  002_profit_agent_schema.sql  003_oco_groups.sql  004_fii_fundamentals.sql  005_crypto_signals_history.sql  006_robot_trade.sql  007_backfill_jobs.sql  008_ohlc_1m_extra_cols.sql  009_ohlc_cagg_hierarchy.sql  010_b3_no_trading_days.sql  011_b3_no_trading_segment.sql
migrations/versions/: 0012_ml_features.py
observability/prometheus/: prometheus.yml
repositories/: portfolio_repo.py
scripts/: _dbg.py  add_ml_route.py  add_websocket.py  api_market.py  apply_backfill_migration.py  audit_profit_price_scale.py  backfill_2025_top50.py  backfill_2y_futures.py  backfill_dashboard.ps1  backfill_default_portfolios.py  backfill_historico_watchlist.py  backfill_history.py  backfill_recentes_4dias.py  backfill_resilient.py  backfill_resilient_dashboard.ps1  backfill_resume.py  backfill_run_05mai.ps1  backfill_subscribed_19abr.py  backfill_supervisor.ps1  backfill_today_dashboard.ps1  backfill_today_subscribed.py  backfill_winfut_retry.py  backfill_yahoo_daily_bars.py  backfill_yahoo_etf.py  backfill_yahoo_fii.py  backtest_demo_dsr.py  bulk_cadastrar_top500_tickers.py  calibrate_ml_thresholds.py  cointegration_expand.py  cointegration_screen.py  compact_profit_agent_logs.ps1  copom_fetch.py  copom_finetune.py  copom_infer.py  copom_label_selic.py  copom_smoke_synthetic.py  e2e_test.py  features_daily_builder.py  fix_live_endpoints.py  fix_live_v3.py  (+98 more)
scripts/_archive/: README.md  fix_live_v2.py  fix_ws_sse.py  patch_chunk_warmup.py  patch_db_after_market.py  patch_fix_self_import.py  (+5 more)
sprint1_legacy/: docker-compose.yml  pyproject.toml
src/finanalytics_ai/interfaces/api/static/000/: ARQUITETURA_AUDIT.md  CONTEXTO_IA_atualizado.md  DECISOES_ARQUITETURAIS.md  Histórico-05_04_2026, 15_48_43.csv  PosicaoDetalhada.xlsx  TransactionHistory_2026-03-16 12-27.csv  compress_project.ps1  extrato_de_07-11-2025_ate_31-01-2026.csv  extrato_de_16-12-2025_ate_16-03-2026.csv  finanalytics_fix_sprint2.ps1  forex_project_context.md  posicao_consolidada.csv  pyproject.toml  sessao5_resumo.txt  sessao6_resumo.txt  xp_nota_wdo_23032026.csv
tests/: conftest.py
(+651 files in other folders)
