# ══════════════════════════════════════════════════════════════════════════════
# finanalytics-ai — pyproject.toml
# Gerenciador de pacotes: uv  (uv sync --dev)
# Build backend:         hatchling
# Layout:                src/ (Sources Root no PyCharm = src/)
# ══════════════════════════════════════════════════════════════════════════════

[project]
name            = "finanalytics-ai"
version         = "0.1.0"
description     = "Financial analytics platform with async event processing"
readme          = "README.md"
requires-python = ">=3.12"

dependencies = [
    # ── Web / API ──────────────────────────────────────────────────────────
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.29.0",
    "python-multipart>=0.0.9",

    # ── Database ───────────────────────────────────────────────────────────
    "sqlalchemy[asyncio]>=2.0.30",
    "asyncpg>=0.29.0",
    "psycopg2-binary>=2.9.9",        # alembic CLI (sync)
    "alembic>=1.13.1",

    # ── Cache / Messaging ──────────────────────────────────────────────────
    "redis>=5.0.3",
    "aiokafka>=0.10.0",

    # ── Validation / Settings ──────────────────────────────────────────────
    "pydantic>=2.7.0",
    "pydantic-settings>=2.2.0",
    "python-dotenv>=1.0.0",

    # ── HTTP client ────────────────────────────────────────────────────────
    "aiohttp>=3.9.5",
    "httpx>=0.27.0",

    # ── Resiliência ────────────────────────────────────────────────────────
    "tenacity>=8.3.0",

    # ── Observabilidade ────────────────────────────────────────────────────
    "structlog>=24.1.0",
    "prometheus-client>=0.20.0",
    "opentelemetry-api>=1.24.0",
    "opentelemetry-sdk>=1.24.0",
    "opentelemetry-instrumentation-sqlalchemy>=0.45b0",

    # ── Auth / Segurança ───────────────────────────────────────────────────
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "bcrypt==4.0.1",                  # pin: API pública estável

    # ── Data / Analytics ───────────────────────────────────────────────────
    "numpy>=1.26.0",
    "pandas>=2.2.0",
    "polars>=0.20.0",
    "scipy>=1.13.0",
    "scikit-learn>=1.4.0",
    "lightgbm>=4.3.0",
    "arch>=6.3.0",
    "python-dateutil>=2.9.0",

    # ── Parsing de documentos ──────────────────────────────────────────────
    "pdfplumber>=0.10.0",
    "openpyxl>=3.1.0",

    # ── Relatórios ─────────────────────────────────────────────────────────
    "reportlab>=4.1.0",
    "pillow>=10.3.0",

    # ── Utilitários ────────────────────────────────────────────────────────
    "click>=8.1.0",
]

# ──────────────────────────────────────────────────────────────────────────────
# Extras de produção — não incluídos por padrão, mas disponíveis via
#   pip install -e ".[market]"  (em ambientes sem uv)
# ──────────────────────────────────────────────────────────────────────────────
[project.optional-dependencies]
market = ["yfinance>=0.2.0"]

# ──────────────────────────────────────────────────────────────────────────────
# Dependências de desenvolvimento (PEP 735 / uv)
#   uv sync --dev          → instala tudo abaixo + deps do projeto
#   uv run pytest          → já usa o grupo dev automaticamente
# ──────────────────────────────────────────────────────────────────────────────
[dependency-groups]
dev = [
    # Testes
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.6",
    "pytest-cov>=5.0.0",
    "pytest-mock>=3.14.0",
    "freezegun>=1.5.0",
    "factory-boy>=3.3.0",
    # Type checking
    "mypy>=1.10.0",
    "sqlalchemy[mypy]>=2.0.30",
    "types-python-dateutil>=2.9.0",
    "types-passlib>=1.7.7",
    "types-reportlab>=4.1.0",
    "types-openpyxl>=3.1.0",
    # Linting / formatação
    "ruff>=0.4.5",
    "black>=24.4.2",
    # Utilitários de dev
    "ipython>=8.24.0",
]

# ──────────────────────────────────────────────────────────────────────────────
# Build backend
# ──────────────────────────────────────────────────────────────────────────────
[build-system]
requires      = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/finanalytics_ai"]

# ══════════════════════════════════════════════════════════════════════════════
# PYTEST
# ══════════════════════════════════════════════════════════════════════════════
[tool.pytest.ini_options]
asyncio_mode                       = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths                          = ["tests"]
pythonpath                         = ["src"]
addopts = [
    "--strict-markers",
    "--tb=short",
    "-q",
    "--cov=src/finanalytics_ai",
    "--cov-report=term-missing:skip-covered",
    "--cov-report=html:.htmlcov",
    "--cov-fail-under=0",
]
markers = [
    "unit:        testes unitários puros (sem I/O)",
    "integration: testes com banco/redis/kafka reais",
    "slow:        testes lentos (>2s)",
]

# ══════════════════════════════════════════════════════════════════════════════
# MYPY
# ══════════════════════════════════════════════════════════════════════════════
[tool.mypy]
mypy_path = "src"
explicit_package_bases = true
python_version       = "3.12"
strict               = false
warn_return_any      = false
warn_unused_configs  = true
show_error_codes     = true
pretty               = true
exclude = ["src/finanalytics_ai/interfaces/api/static/ProfitDLL"]
plugins = ["sqlalchemy.ext.mypy.plugin", "pydantic.mypy"]

[[tool.mypy.overrides]]
module = [
    "asyncpg.*", "prometheus_client.*", "alembic.*",
    "lightgbm.*", "arch.*", "pdfplumber.*", "reportlab.*",
    "opentelemetry.*", "aiokafka.*", "factory_boy.*", "freezegun.*",
]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = [
    "finanalytics_ai.interfaces.*",
    "finanalytics_ai.domain.*",
    "finanalytics_ai.application.*",
    "finanalytics_ai.infrastructure.*",
    "finanalytics_ai.workers.*",
    "finanalytics_ai.container",
    "finanalytics_ai.container_v2",
    "finanalytics_ai.main",
    "finanalytics_ai.metrics",
    "finanalytics_ai.exceptions",
    "finanalytics_ai.observability.*",
    "finanalytics_ai.interfaces.api.static.*",
]
ignore_errors = true

[[tool.mypy.overrides]]
module                = ["tests.*"]
disallow_untyped_defs = false
ignore_errors         = true

[[tool.mypy.overrides]]
module = [
    "finanalytics_ai.domain.events.*",
    "finanalytics_ai.application.event_processor.*",
    "finanalytics_ai.infrastructure.database.*",
    "finanalytics_ai.infrastructure.adapters.*",
    "finanalytics_ai.config",
    "finanalytics_ai.container",
]
strict               = true
warn_return_any      = true
warn_unused_ignores  = true
no_implicit_reexport = true

[tool.pydantic-mypy]
init_forbid_extra            = true
init_typed                   = true
warn_required_dynamic_aliases = true

# RUFF
# ══════════════════════════════════════════════════════════════════════════════
[tool.ruff]
target-version = "py312"
line-length    = 100
src            = ["src", "tests"]

[tool.ruff.lint]
# Conjunto base recomendado para projetos Python modernos
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "UP",   # pyupgrade (moderniza sintaxe)
    "B",    # flake8-bugbear (anti-patterns)
    "C4",   # flake8-comprehensions
    "SIM",  # flake8-simplify
    "TCH",  # flake8-type-checking (move imports para TYPE_CHECKING)
    "ANN",  # flake8-annotations (exige anotações de tipo)
    "PT",   # flake8-pytest-style
    "RUF",  # ruff-specific rules
    "ASYNC",# flake8-async (evita bloqueios em código async)
]
ignore = [
    "ANN401",  # Any às vezes é necessário (overrides, generics)
    "RUF001",  # strings Unicode (comentários em PT-BR com acento)
    "RUF002",  # docstrings Unicode
    "RUF003",  # comentários Unicode
    "E501",    # line-too-long — gerenciado pelo black
]

[tool.ruff.lint.per-file-ignores]
# FastAPI: Depends() em parâmetro é o pattern correto — B008 não se aplica
"src/finanalytics_ai/interfaces/api/**"   = ["B008", "ANN001", "ANN201", "ANN202"]
# Routers: respostas de endpoint raramente precisam de retorno anotado
"src/finanalytics_ai/interfaces/api/routers/**" = ["ANN"]
# Migrações Alembic: geradas automaticamente
"alembic/versions/**"                     = ["ANN", "E", "W", "F401"]
# Configuração Alembic
"alembic/env.py"                          = ["ANN"]
# Testes: menos rígido com anotações e alguns padrões pytest
"tests/**"                                = ["ANN", "S101", "PT"]

[tool.ruff.lint.isort]
known-first-party  = ["finanalytics_ai"]
combine-as-imports = true
force-sort-within-sections = true

[tool.ruff.lint.flake8-annotations]
mypy-init-return   = true       # __init__ não precisa de -> None
suppress-none-returning = true  # funções óbvias não precisam de -> None

[tool.ruff.lint.flake8-bugbear]
# asyncio.sleep(0) é idioma válido para yield de controle
extend-immutable-calls = ["fastapi.Depends", "fastapi.Query", "fastapi.Header"]

[tool.ruff.format]
# ruff format como alternativa ao black — ambos configurados para coexistir
quote-style         = "double"
indent-style        = "space"
skip-magic-trailing-comma = false
line-ending         = "auto"

# ══════════════════════════════════════════════════════════════════════════════
# BLACK
# ══════════════════════════════════════════════════════════════════════════════
[tool.black]
line-length    = 100
target-version = ["py312"]
# black e ruff format devem convergir — manter line-length idêntico
# Se usar ruff format, pode desativar black no pre-commit (escolha um)

# ══════════════════════════════════════════════════════════════════════════════
# COVERAGE
# ══════════════════════════════════════════════════════════════════════════════
[tool.coverage.run]
source   = ["src/finanalytics_ai"]
omit     = [
    "*/migrations/*",
    "*/alembic/*",
    "*/tests/*",
    "*/__main__.py",
]
branch   = true                # mede cobertura de branches (if/else)

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
    "@(abc\\.)?abstractmethod",
    "if __name__ == .__main__.:",
]
