[project]
name = "finanalytics-ai"
version = "0.1.0"
description = "Financial analytics platform with async event processing"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.29.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "asyncpg>=0.29.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.2.0",
    "aiohttp>=3.9.0",
    "tenacity>=8.3.0",
    "structlog>=24.1.0",
    "prometheus-client>=0.20.0",
    "alembic>=1.13.0",
    "python-dotenv>=1.0.0",
    "lightgbm>=4.3",
    "polars>=0.20",
    "scipy>=1.13",
    "scikit-learn>=1.4",
    "arch>=6.3",
    "opentelemetry-api>=1.40.0",
    "psycopg2-binary>=2.9.11",
    # Extras opcionais de produção — instale conforme necessário:
    # auth:        python-jose[cryptography], passlib[bcrypt]
    # cache/idem:  redis>=5.0.0
    # kafka:       aiokafka>=0.10.0
    # market:      yfinance>=0.2.0
    # otel full:   opentelemetry-sdk>=1.20.0
]

# ──────────────────────────────────────────────────────────────────────────────
# Extras de produção (pip install -e ".[auth,cache]")
# Não misturar com dev — uv sync --dev não lê esta seção.
# ──────────────────────────────────────────────────────────────────────────────
[project.optional-dependencies]
auth  = ["python-jose[cryptography]>=3.3.0", "passlib[bcrypt]>=1.7.4"]
cache = ["redis>=5.0.0"]
kafka = ["aiokafka>=0.10.0"]
market = ["yfinance>=0.2.0"]

# ──────────────────────────────────────────────────────────────────────────────
# uv build backend
# ──────────────────────────────────────────────────────────────────────────────
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/finanalytics_ai"]

# ──────────────────────────────────────────────────────────────────────────────
# Dependências de desenvolvimento (PEP 735 / uv)
# Fonte única da verdade para: uv sync --dev
# Adicionar aqui = disponível em todos os ambientes de dev/CI.
# ──────────────────────────────────────────────────────────────────────────────
[dependency-groups]
dev = [
    # ── Testes ────────────────────────────────────────────────────────────────
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=7.0.0",
    "httpx>=0.27.0",            # cliente HTTP assíncrono para testes de API
    "aiosqlite>=0.22.1",        # SQLite async para testes de integração (sem banco real)

    # ── Qualidade de código ───────────────────────────────────────────────────
    "mypy>=1.10.0",
    "ruff>=0.15.0",
    "black>=24.4.0",

    # ── Observabilidade (testes que importam opentelemetry.sdk) ───────────────
    "opentelemetry-sdk>=1.20.0",

    # ── Dados / parquet (testes do cliente Fintz) ─────────────────────────────
    "pyarrow>=16.0.0",

    # ── Resiliência ───────────────────────────────────────────────────────────
    "tenacity>=9.1.4",
]

# ──────────────────────────────────────────────────────────────────────────────
# pytest
# ──────────────────────────────────────────────────────────────────────────────
[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
addopts = [
    "--strict-markers",
    "--tb=short",
    "-q",
]
markers = [
    "integration: testes que requerem banco real (Postgres + Redis)",
    "integration_v2: testes de integração com SQLite async (sem infra externa)",
    "slow: testes lentos (>1s)",
]

# ──────────────────────────────────────────────────────────────────────────────
# mypy
# ──────────────────────────────────────────────────────────────────────────────
[tool.mypy]
mypy_path = ["src"]
explicit_package_bases = true
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = false
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = [
    "asyncpg.*",
    "prometheus_client.*",
    "alembic.*",
    "lightgbm.*",
    "arch.*",
    "scipy.*",
    "sklearn.*",
]
ignore_missing_imports = true

# ──────────────────────────────────────────────────────────────────────────────
# ruff (linting + isort)
# ──────────────────────────────────────────────────────────────────────────────
[tool.ruff]
target-version = "py312"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "UP",   # pyupgrade
    "TCH",  # type-checking imports
    "ANN",  # flake8-annotations (type hints obrigatórios)
    "RUF",  # ruff-specific rules
]
ignore = [
    "ANN101",   # self não precisa de anotação
    "ANN102",   # cls não precisa de anotação
    "ANN401",   # permite Any quando explícito e documentado
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["ANN", "S101"]   # testes: sem type hints obrigatórios, assert OK

[tool.ruff.lint.isort]
known-first-party = ["finanalytics_ai"]

# ──────────────────────────────────────────────────────────────────────────────
# black (formatação)
# ──────────────────────────────────────────────────────────────────────────────
[tool.black]
line-length = 100
target-version = ["py312"]

# ──────────────────────────────────────────────────────────────────────────────
# cobertura de testes
# ──────────────────────────────────────────────────────────────────────────────
[tool.coverage.run]
source = ["src/finanalytics_ai"]
omit = ["*/migrations/*", "*/alembic/*", "*/__main__.py"]

[tool.coverage.report]
show_missing = true
fail_under = 80
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
    "@(abc\\.)?abstractmethod",
]
